# libsmarter

./: meson.build  meson.options
include/: smarter.hpp
